--- a/cv_7.tex
+++ b/cv_7.tex
@@ -27,7 +27,7 @@
 \documentclass[11pt,a4paper,sans]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
 
 \moderncvstyle{casual} % CV theme - options include: 'casual' (default), 'classic', 'oldstyle' and 'banking'
-\moderncvcolor{blue} % CV color - options include: 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+\moderncvcolor{orange} % CV color - options include: 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
 
@@ -39,20 +39,16 @@
 %	NAME AND CONTACT INFORMATION SECTION
 %----------------------------------------------------------------------------------------
 
-\firstname{John} % Your first name
-\familyname{Smith} % Your last name
+\firstname{Kayli} % Your first name
+\familyname{Kallina} % Your last name
 
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vitae}
-\address{123 Broadway}{City, State 12345}
-\mobile{(000) 111 1111}
-\phone{(000) 111 1112}
-\fax{(000) 111 1113}
-\email{john@smith.com}
-\homepage{staff.org.edu/~jsmith}{staff.org.edu/$\sim$jsmith} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
-\extrainfo{additional information}
-\photo[70pt][0.4pt]{pictures/picture} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
-\quote{"A witty and playful quotation" - John Smith}
+\address{1029 CR 185}{Garwood, Texas 77442}
+\mobile{(979) 758 2010}
+\email{kaylikallina@gmail.com}
+% The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
+
 
 %----------------------------------------------------------------------------------------
 
@@ -93,52 +89,131 @@
 
 \section{Education}
 
-\cventry{2011--2012}{Masters of Commerce}{The University of California}{Berkeley}{\textit{GPA -- 8.0}}{First Class Honours}  % Arguments not required can be left empty
-\cventry{2007--2010}{Bachelor of Business Studies}{The University of California}{Berkeley}{\textit{GPA -- 7.5}}{Specialized in Commerce}
-
-\section{Masters Thesis}
-
-\cvitem{Title}{\emph{Money Is The Root Of All Evil -- Or Is It?}}
-\cvitem{Supervisors}{Professor James Smith \& Associate Professor Jane Smith}
-\cvitem{Description}{This thesis explored the idea that money has been the cause of untold anguish and suffering in the world. I found that it has, in fact, not.}
+\cventry{2010--2014}{B.S. in  Psychology}{University of Texas}{Austin}{\textit{GPA -- 3.50/4.0}}{Education Minor}  % Arguments not required can be left empty
+\cventry{2015--2017}{Postbaccalaureate coursework}{}{}{\textit{GPA -- 3.73/4.0}}{Pre-Med requirements completed at the University of Texas and Austin Community College}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\section{Experience}
+\section{Employment}
 
-\subsection{Vocational}
-
-\cventry{2012--Present}{1\textsuperscript{st} Year Analyst}{\textsc{Lehman Brothers}}{Los Angeles}{}{Developed spreadsheets for risk analysis on exotic derivatives on a wide array of commodities (ags, oils, precious and base metals), managed blotter and secondary trades on structured notes, liaised with Middle Office, Sales and Structuring for bookkeeping.
+\cventry{2015--2017}{Research Technician}{\textsc{Colgin Lab}}{University of Texas}{}{I designed and built devices for in vivo electrophysiological experiments in freely behaving animal models, prepared histological samples, and performed state-of-the-art microscopy techniques. I supervised research assistants at the undergraduate and post-bac level, and trained graduate students, postdoctoral researchers, and visiting scholars in electrophysiological recording device construction. I was also responsible for maintaining a safe laboratory environment.
 \newline{}\newline{}
 Detailed achievements:
 \begin{itemize}
-\item Learned how to make amazing coffee
-\item Finally determined the reason for \textsc{PC LOAD LETTER}:
-\begin{itemize}
-\item Paper jam
-\item Software issues:
-\begin{itemize}
-\item Word not sending the correct data to printer
-\item Windows trying to print in letter format
-\end{itemize}
-\item Coffee spilled inside printer
-\end{itemize}
-\item Broke the office record for number of kitten pictures in cubicle
+\item Provided recording devices used to collect data that led to four publications
+\item Developed a comprehensive instructional manual on the assembly of recording devices that has been adopted by labs in the US, Taiwan, and India
+\item Modified and implemented a new device design that increased the number of simultaneous recordings collected per animal
+\item Led small group session on neuron rate coding for Dell Medical School Health Sciences Summer Camp 2016
+\item Obtained Green Lab certification for implementing sustainable laboratory practices, and served as first Green Labs Ambassador for the Colgin Lab
 \end{itemize}}
 
 %------------------------------------------------
 
-\cventry{2011--2012}{Summer Intern}{\textsc{Lehman Brothers}}{Los Angeles}{}{Rated "truly distinctive" for Analytical Skills and Teamwork.}
+\cventry{Fall 2013}{English Teacher}{\textsc{Colegio Agust\'in de Hipona}}{Callao, Per\'u}{}{I prepared and taught English lessons to a hundred elementary students daily, and to faculty twice a week.
+\newline{}\newline{}
+Detailed achievements:
+\begin{itemize}
+\item Organized first English spelling competition and lunchtime karaoke
+\item Collaborated with board of directors to evaluate success of bilingual program
+\end{itemize}}
 
 %------------------------------------------------
 
-\subsection{Miscellaneous}
+\cventry{Summer 2011 \& 2012}{Lifeguard}{\textsc{El Campo Aquatic Center}}{El Campo, Texas}{}{}
 
-\cventry{2010--2011}{}{}{}{}{Spent some time finding myself. This was a courageous endeavour that didn't have a job title. It was quite important to my overall development though so I'm adding it to my CV. Also it explains the gap in my otherwise stellar CV.}
+%------------------------------------------------
 
-\cventry{2009--2010}{Computer Repair Specialist}{Buy More}{Burbank}{}{Worked in the Nerd Herd and helped to solve computer problems. Allowed me to become expert in all forms of martial arts and weaponry.}
+\cventry{Summer 2010 \& 2011}{Dispatching/Operations Technician}{\textsc{Kallina Dryer Inc.}}{Altair, Texas}{}{During harvest, I weighed freight trucks using an industrial scale, analyzed rice samples, and operated conveyors to direct grain to treatment and storage facilities.}
+
+%------------------------------------------------
+
+
+
+
+%----------------------------------------------------------------------------------------
+%	RESEARCH SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Research}
+
+%------------------------------------------------
+
+\cventry{2017--}{Publications}{\textsc{Colgin Lab}}{University of Texas}{}{Kallina, K., Bobbitt, K., Wright, A., Colgin, L.L. (2017) Fabrication of micro-drive for multisite tetrode recordings in freely behaving mice. Journal of Visualized Experiments (JoVE) (in preparation).}
+
+%------------------------------------------------
+
+\cventry{2013--2014}{Undergraduate Assistant}{\textsc{Cognitive Neuroscience Lab}}{University of Texas}{}{For an average of 10 hours per week, I conducted behavioral and neuropsychological tests. I processed blood specimen for further analysis, and was certified as a Level 1 MRI Operator.}
+
+%------------------------------------------------
+
+%----------------------------------------------------------------------------------------
+%	HEALTHCARE SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Healthcare}
+
+%------------------------------------------------
+
+\cventry{Summer 2017}{Physician shadowing}{\textsc{Rice Medical Center}}{Eagle Lake, Texas}{}{I observed primary care consultations in a Rural Family Medicine clinic. I also attended rounds and outpatient wound care services at the center's Critical Access Hospital.}
+
+\cvlistitem{R. Russell Thomas, Jr., DO, Family Medicine, \textit{Fifty hours}}
+
+\cvlistitem{Alyssa Molina, MD, Family Medicine, \textit{Twenty hours}}
+
+%------------------------------------------------
+
+\cventry{Fall 2014}{Occupational Therapist shadowing}{\textsc{Mentis Neuro}}{Dripping Springs, Texas}{}{I observed individual and group therapy for inpatients recovering from Traumatic Brain Injury.}
+
+\cvlistitem{Roxane Nichols, OTR, \textit{Twenty hours}}
+
+%------------------------------------------------
+
+
+%------------------------------------------------
+
+%----------------------------------------------------------------------------------------
+%	COMMUNITY SERVICE SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Community Service}
+
+%------------------------------------------------
+
+\cventry{Spring 2016}{Teaching Assistant}{\textsc{Adults with IDD}}{University of Texas}{\textit{Twenty hours}}{}
+\cvlistitem{Facilitated a supportive and inclusive learning environment for adults with intellectual and developmental disabilities.}
+\cvlistitem{Oversaw the safe arrival and departure of students to weekly, evening classes.}
+
+%------------------------------------------------
+
+\cventry{2014--2015}{English Teacher}{\textsc{Casa Marianella}}{Austin, Texas}{\textit{Two hundred hours}}{}
+\cvlistitem{Completed Literacy Coalition of Central Texas English Forward training.}
+\cvlistitem{Created English curriculum for immigrant and refugee adult learners}
+\cvlistitem{Led evening classes and coordinated Show and Tell events}
+\cvlistitem{Prepared dinner for forty residents of the emergency shelter}
+\cvlistitem{Provided career building support for shelter residents}
+\cvlistitem{Developed cultural competency by communicating effectively with a diverse, international population.
+}
+
+%------------------------------------------------
+
+\cventry{Spring 2014}{Reading Tutor}{\textsc{Linder Elementary}}{Austin, Texas}{\textit{Ten hours}}{}
+
+%------------------------------------------------
+
+\cventry{2011--2012}{HOSTS Reading Mentor}{\textsc{Metz Elementary}}{Austin, Texas}{\textit{Fifty hours}}{}
+
+%------------------------------------------------
+
+\cventry{Spring 2011}{Classroom Assistant}{\textsc{Reagan High School}}{Austin, Texas}{\textit{Forty hours}}{}
+
+%------------------------------------------------
+
+\cventry{Dec. 2010}{Music Therapy Volunteer}{\textsc{Columbus Elementary}}{Columbus,Texas}{\textit{Fourteen hours}}{}
+
+%------------------------------------------------
+
 
 %----------------------------------------------------------------------------------------
 %	AWARDS SECTION
@@ -146,37 +221,29 @@ Detailed achievements:
 
 \section{Awards}
 
-\cvitem{2011}{School of Business Postgraduate Scholarship}
-\cvitem{2010}{Top Achiever Award -- Commerce}
+\cvitem{2015}{Best "Unchalk Talk" at UT Institute for Neuroscience retreat}
+\cvitem{2012--2014}{University of Texas Service Scholar}
+\cvitem{2010--2014}{Terry Foundation Scholar}
+\cvitem{2010--2014}{Wintermann Foundation Scholar}
+\cvitem{2010--2014}{Star of Texas Fair \& Rodeo Scholar}
+\cvitem{2010}{Valedictorian of Rice CISD High School}
 
 %----------------------------------------------------------------------------------------
-%	COMPUTER SKILLS SECTION
+%	EXTRACURRICULAR SECTION
 %----------------------------------------------------------------------------------------
 
-\section{Computer skills}
+\section{Extracurricular Activities}
 
-\cvitem{Basic}{\textsc{java}, Adobe Illustrator}
-\cvitem{Intermediate}{\textsc{python}, \textsc{html}, \LaTeX, OpenOffice, Linux, Microsoft Windows}
-\cvitem{Advanced}{Computer Hardware and Support}
+\cventry{2011--2014}{AIESEC}{\textsc{Austin, Texas}}{}{}{AIESEC is a student-run international organization that matches university students to internships abroad.}
 
-%----------------------------------------------------------------------------------------
-%	COMMUNICATION SKILLS SECTION
-%----------------------------------------------------------------------------------------
+\cvlistitem{Interviewed, matched, and arranged J-1 visa documents for incoming Austin interns.}
+\cvlistitem{Most Valuable Member of Talent Management branch (Fall 2012).}
+\cvlistitem{Established membership satisfaction survery.}
+\cvlistitem{Planned two formal banquest for fifty members and guests.}
+\cvlistitem{Coordinated first multicultural fair, booked local musicians, and hosted a certified Green Event.}
 
-\section{Communication Skills}
+\cventry{2011--2014}{University of Texas Service Scholars}{\textsc{Austin, Texas}}{}{}{In this program at the Lyndon B. Johnson School of Public Affairs, I completed fifty hours of volunteer work in the education sector each semester. I attended biweekly seminars on leadership and public service, where I presented my work to fellow scholars and program coordinators.}
 
-\cvitem{2010}{Oral Presentation at the California Business Conference}
-\cvitem{2009}{Poster at the Annual Business Conference in Oregon}
-
-%----------------------------------------------------------------------------------------
-%	LANGUAGES SECTION
-%----------------------------------------------------------------------------------------
-
-\section{Languages}
-
-\cvitemwithcomment{English}{Mothertongue}{}
-\cvitemwithcomment{Spanish}{Intermediate}{Conversationally fluent}
-\cvitemwithcomment{Dutch}{Basic}{Basic words and phrases only}
 
 %----------------------------------------------------------------------------------------
 %	INTERESTS SECTION
@@ -186,9 +253,9 @@ Detailed achievements:
 
 \renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
 
-\cvlistdoubleitem{Piano}{Chess}
-\cvlistdoubleitem{Cooking}{Dancing}
-\cvlistitem{Running}
+\cvlistdoubleitem{Guitar/Singing}{Cooking}
+\cvlistdoubleitem{Spanish}{Dancing}
+\cvlistitem{Trail Running}
 
 %----------------------------------------------------------------------------------------
 
