--- a/cv_7.tex
+++ b/cv_7.tex
@@ -23,8 +23,7 @@
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
-
-\documentclass[11pt,a4paper,sans]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
+\documentclass[11pt,a4paper,roman]{moderncv} % Font sizes: 10, 11, or 12; paper sizes: a4paper, letterpaper, a5paper, legalpaper, executivepaper or landscape; font families: sans or roman
 
 \moderncvstyle{casual} % CV theme - options include: 'casual' (default), 'classic', 'oldstyle' and 'banking'
 \moderncvcolor{orange} % CV color - options include: 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
@@ -55,29 +54,6 @@
 \begin{document}
 
 %----------------------------------------------------------------------------------------
-%	COVER LETTER
-%----------------------------------------------------------------------------------------
-
-% To remove the cover letter, comment out this entire block
-
-\clearpage
-
-\recipient{HR Department}{Corporation\\123 Pleasant Lane\\12345 City, State} % Letter recipient
-\date{\today} % Letter date
-\opening{Dear Sir or Madam,} % Opening greeting
-\closing{Sincerely yours,} % Closing phrase
-\enclosure[Attached]{curriculum vit\ae{}} % List of enclosed documents
-
-\makelettertitle % Print letter title
-
-\lipsum[1-2] % Dummy text
-\lipsum[4] % Dummy text
-
-\makeletterclosing % Print letter signature
-
-\newpage
-
-%----------------------------------------------------------------------------------------
 %	CURRICULUM VITAE
 %----------------------------------------------------------------------------------------
 
@@ -98,7 +74,7 @@
 
 \section{Employment}
 
-\cventry{2015--2017}{Research Technician}{\textsc{Colgin Lab}}{University of Texas}{}{I designed and built devices for in vivo electrophysiological experiments in freely behaving animal models, prepared histological samples, and performed state-of-the-art microscopy techniques. I supervised research assistants at the undergraduate and post-bac level, and trained graduate students, postdoctoral researchers, and visiting scholars in electrophysiological recording device construction. I was also responsible for maintaining a safe laboratory environment.
+\cventry{2015--2017}{Research Technician}{\textsc{Colgin Lab}}{University of Texas}{}{I designed and built devices for in vivo electrophysiological experiments in freely behaving animal models, prepared histological samples, and performed state-of-the-art microscopy techniques. I supervised research assistants at the undergraduate and postbac level, and trained graduate students, postdoctoral researchers, and visiting scholars in electrophysiological recording device construction. I was also responsible for maintaining a safe laboratory environment.
 \newline{}\newline{}
 Detailed achievements:
 \begin{itemize}
@@ -111,7 +87,7 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{Fall 2013}{English Teacher}{\textsc{Colegio Agust\'in de Hipona}}{Callao, Per\'u}{}{I prepared and taught English lessons to a hundred elementary students daily, and to faculty twice a week.
+\cventry{Fall 2013}{English Teacher}{\textsc{Coprodeli}}{Callao, Per\'u}{}{I prepared and taught English lessons to a hundred elementary students daily, and to faculty twice a week.
 \newline{}\newline{}
 Detailed achievements:
 \begin{itemize}
@@ -121,11 +97,11 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{Summer 2011 \& 2012}{Lifeguard}{\textsc{El Campo Aquatic Center}}{El Campo, Texas}{}{}
+\cventry{Summer 2011 \& 2012}{Lifeguard}{\textsc{El Campo Aquatic Center}}{El Campo, TX}{}{}
 
 %------------------------------------------------
 
-\cventry{Summer 2010 \& 2011}{Dispatching/Operations Technician}{\textsc{Kallina Dryer Inc.}}{Altair, Texas}{}{During harvest, I weighed freight trucks using an industrial scale, analyzed rice samples, and operated conveyors to direct grain to treatment and storage facilities.}
+\cventry{Summer 2010 \& 2011}{Dispatching/Operations Technician}{\textsc{Kallina Dryer Inc.}}{Altair, TX}{}{During harvest, I weighed freight trucks using an industrial scale, analyzed rice samples, and operated conveyors to direct grain to treatment and storage facilities.}
 
 %------------------------------------------------
 
@@ -144,7 +120,7 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{2013--2014}{Undergraduate Assistant}{\textsc{Cognitive Neuroscience Lab}}{University of Texas}{}{For an average of 10 hours per week, I conducted behavioral and neuropsychological tests. I processed blood specimen for further analysis, and was certified as a Level 1 MRI Operator.}
+\cventry{2013--2014}{Undergraduate Assistant}{\textsc{Cog Neuro Lab}}{University of Texas}{}{For an average of 10 hours per week, I conducted behavioral and neuropsychological tests. I processed blood specimen for further analysis, and was certified as a Level 1 MRI Operator.}
 
 %------------------------------------------------
 
@@ -156,7 +132,7 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{Summer 2017}{Physician shadowing}{\textsc{Rice Medical Center}}{Eagle Lake, Texas}{}{I observed primary care consultations in a Rural Family Medicine clinic. I also attended rounds and outpatient wound care services at the center's Critical Access Hospital.}
+\cventry{Summer 2017}{Physician shadowing}{\textsc{Rice Medical Center}}{Eagle Lake, TX}{}{I observed primary care consultations in a Rural Family Medicine clinic. I also attended rounds and outpatient wound care services at the center's Critical Access Hospital.}
 
 \cvlistitem{R. Russell Thomas, Jr., DO, Family Medicine, \textit{Fifty hours}}
 
@@ -164,7 +140,7 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{Fall 2014}{Occupational Therapist shadowing}{\textsc{Mentis Neuro}}{Dripping Springs, Texas}{}{I observed individual and group therapy for inpatients recovering from Traumatic Brain Injury.}
+\cventry{Fall 2014}{Occupational Therapy shadowing}{\textsc{Mentis Neuro}}{Dripping Springs, TX}{}{I observed individual and group therapy for inpatients recovering from Traumatic Brain Injury.}
 
 \cvlistitem{Roxane Nichols, OTR, \textit{Twenty hours}}
 
@@ -187,7 +163,7 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{2014--2015}{English Teacher}{\textsc{Casa Marianella}}{Austin, Texas}{\textit{Two hundred hours}}{}
+\cventry{2014--2015}{English Teacher}{\textsc{Casa Marianella}}{Austin, TX}{\textit{Two hundred hours}}{}
 \cvlistitem{Completed Literacy Coalition of Central Texas English Forward training.}
 \cvlistitem{Created English curriculum for immigrant and refugee adult learners}
 \cvlistitem{Led evening classes and coordinated Show and Tell events}
@@ -198,19 +174,19 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{Spring 2014}{Reading Tutor}{\textsc{Linder Elementary}}{Austin, Texas}{\textit{Ten hours}}{}
+\cventry{Spring 2014}{Reading Tutor}{\textsc{Linder Elementary}}{Austin, TX}{\textit{Ten hours}}{}
 
 %------------------------------------------------
 
-\cventry{2011--2012}{HOSTS Reading Mentor}{\textsc{Metz Elementary}}{Austin, Texas}{\textit{Fifty hours}}{}
+\cventry{2011--2012}{HOSTS Reading Mentor}{\textsc{Metz Elementary}}{Austin, TX}{\textit{Fifty hours}}{}
 
 %------------------------------------------------
 
-\cventry{Spring 2011}{Classroom Assistant}{\textsc{Reagan High School}}{Austin, Texas}{\textit{Forty hours}}{}
+\cventry{Spring 2011}{Classroom Assistant}{\textsc{Reagan High School}}{Austin, TX}{\textit{Forty hours}}{}
 
 %------------------------------------------------
 
-\cventry{Dec. 2010}{Music Therapy Volunteer}{\textsc{Columbus Elementary}}{Columbus,Texas}{\textit{Fourteen hours}}{}
+\cventry{Dec. 2010}{Music Therapy}{\textsc{Columbus Elementary}}{Columbus, TX}{\textit{Fourteen hours}}{}
 
 %------------------------------------------------
 
@@ -234,7 +210,7 @@ Detailed achievements:
 
 \section{Extracurricular Activities}
 
-\cventry{2011--2014}{AIESEC}{\textsc{Austin, Texas}}{}{}{AIESEC is a student-run international organization that matches university students to internships abroad.}
+\cventry{2011--2014}{AIESEC}{\textsc{Austin, TX}}{}{}{AIESEC is a student-run international organization that matches university students to internships abroad.}
 
 \cvlistitem{Interviewed, matched, and arranged J-1 visa documents for incoming Austin interns.}
 \cvlistitem{Most Valuable Member of Talent Management branch (Fall 2012).}
@@ -242,21 +218,38 @@ Detailed achievements:
 \cvlistitem{Planned two formal banquest for fifty members and guests.}
 \cvlistitem{Coordinated first multicultural fair, booked local musicians, and hosted a certified Green Event.}
 
-\cventry{2011--2014}{University of Texas Service Scholars}{\textsc{Austin, Texas}}{}{}{In this program at the Lyndon B. Johnson School of Public Affairs, I completed fifty hours of volunteer work in the education sector each semester. I attended biweekly seminars on leadership and public service, where I presented my work to fellow scholars and program coordinators.}
-
+\cventry{2011--2014}{University of Texas Service Scholars}{\textsc{Austin, TX}}{}{}{In this program at the Lyndon B. Johnson School of Public Affairs, I completed fifty hours of volunteer work in the education sector each semester. I attended biweekly seminars on leadership and public service, where I presented my work to fellow scholars and program coordinators.}
 
 %----------------------------------------------------------------------------------------
-%	INTERESTS SECTION
+%	MISCELLANEOUS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{Interests}
+\section{Miscellaneous}
+
+\cventry{Summer 2012}{Study Abroad}{\textsc{Antigua, Guatemala}}{}{}{I explored sociocultural influences on learning. I also prepared and conducted weekly English language lessons for twenty-seven elementary age Spanish speakers.}
+
+\cventry{}{Computer Skills}{}{}{}{}
+
+\renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
+
+\cvlistdoubleitem{Microsoft Office}{Google Drive}
+\cvlistdoubleitem{R}{LaTex}
+
+\cventry{}{Languages}{}{}{}{}
+
+\renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
+
+\cvlistdoubleitem{English (native)}{Spanish (fluent)}
+
+\cventry{}{Hobbies}{}{}{}{}
 
 \renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
 
 \cvlistdoubleitem{Guitar/Singing}{Cooking}
-\cvlistdoubleitem{Spanish}{Dancing}
-\cvlistitem{Trail Running}
+\cvlistdoubleitem{Trail Running}{Dancing}
 
-%----------------------------------------------------------------------------------------
+
+
+
 
 \end{document}
