--- a/cv_7.tex
+++ b/cv_7.tex
@@ -65,8 +65,8 @@
 
 \section{Education}
 
-\cventry{2010--2014}{B.S. in  Psychology}{University of Texas}{Austin}{\textit{GPA -- 3.50/4.0}}{Education Minor}  % Arguments not required can be left empty
-\cventry{2015--2017}{Postbaccalaureate coursework}{}{}{\textit{GPA -- 3.73/4.0}}{Pre-Med requirements completed at the University of Texas and Austin Community College}
+\cventry{2010--2014}{B.S. in  Psychology}{University of Texas}{Austin}{\textit{GPA -- 3.50/4.00}}{Education Minor}  % Arguments not required can be left empty
+\cventry{2015--2017}{Postbaccalaureate coursework}{}{}{\textit{GPA -- 3.73/4.00}}{Pre-Med requirements completed at the University of Texas and Austin Community College}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -233,7 +233,7 @@ Detailed achievements:
 \renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
 
 \cvlistdoubleitem{Microsoft Office}{Google Drive}
-\cvlistdoubleitem{R}{LaTex}
+\cvlistdoubleitem{R}{\LaTeX}
 
 \cventry{}{Languages}{}{}{}{}
 
