--- a/cv_7.tex
+++ b/cv_7.tex
@@ -245,8 +245,8 @@ Detailed achievements:
 
 \renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
 
-\cvlistdoubleitem{Guitar/Singing}{Cooking}
-\cvlistdoubleitem{Trail Running}{Dancing}
+\cvlistdoubleitem{Reading}{Guitar/Singing}
+\cvlistdoubleitem{Trail Running}{Cooking}
 
 
 
