--- a/cv_7.tex
+++ b/cv_7.tex
@@ -120,7 +120,7 @@ Detailed achievements:
 
 %------------------------------------------------
 
-\cventry{2013--2014}{Undergraduate Assistant}{\textsc{Cog Neuro Lab}}{University of Texas}{}{For an average of 10 hours per week, I conducted behavioral and neuropsychological tests. I processed blood specimen for further analysis, and was certified as a Level 1 MRI Operator.}
+\cventry{2013--2014}{Undergraduate Assistant}{\textsc{Cog. Neuro. Lab}}{University of Texas}{}{For an average of 10 hours per week, I conducted behavioral and neuropsychological tests. I processed blood specimen for further analysis, and was certified as a Level 1 MRI Operator.}
 
 %------------------------------------------------
 
