--- a/cv_7.tex
+++ b/cv_7.tex
@@ -215,7 +215,7 @@ Detailed achievements:
 \cvlistitem{Interviewed, matched, and arranged J-1 visa documents for incoming Austin interns.}
 \cvlistitem{Most Valuable Member of Talent Management branch (Fall 2012).}
 \cvlistitem{Established membership satisfaction survery.}
-\cvlistitem{Planned two formal banquest for fifty members and guests.}
+\cvlistitem{Planned two formal banquets for fifty members and guests.}
 \cvlistitem{Coordinated first multicultural fair, booked local musicians, and hosted a certified Green Event.}
 
 \cventry{2011--2014}{University of Texas Service Scholars}{\textsc{Austin, TX}}{}{}{In this program at the Lyndon B. Johnson School of Public Affairs, I completed fifty hours of volunteer work in the education sector each semester. I attended biweekly seminars on leadership and public service, where I presented my work to fellow scholars and program coordinators.}
