--- a/cv_7.tex
+++ b/cv_7.tex
@@ -74,6 +74,10 @@
 
 \section{Employment}
 
+\cventry{Aug. 2017 - present}{Emergency Department Scribe}{\textsc{PhysAssist Scribes}}{Dearborn, MI}{}{}
+
+%------------------------------------------------
+
 \cventry{2015--2017}{Research Technician}{\textsc{Colgin Lab}}{University of Texas}{}{I designed and built devices for in vivo electrophysiological experiments in freely behaving animal models, prepared histological samples, and performed state-of-the-art microscopy techniques. I supervised research assistants at the undergraduate and postbac level, and trained graduate students, postdoctoral researchers, and visiting scholars in electrophysiological recording device construction. I was also responsible for maintaining a safe laboratory environment.
 \newline{}\newline{}
 Detailed achievements:
@@ -152,6 +156,8 @@ Detailed achievements:
 
 \section{Community Service}
 
+\cventry{Aug. 2017 - present}{Advocate}{\textsc{Partners in Care Concierge}}{Ann Arbor, MI}{\textit{Three hours}}{Accompany English and/or Spanish-speaking elderly patients to medical appointments.}
+
 %------------------------------------------------
 
 \cventry{Spring 2016}{Teaching Assistant}{\textsc{Adults with IDD}}{University of Texas}{\textit{Twenty hours}}{}
@@ -186,8 +192,7 @@ Detailed achievements:
 \cventry{Dec. 2010}{Music Therapy}{\textsc{Columbus Elementary}}{Columbus, TX}{\textit{Fourteen hours}}{}
 
 %------------------------------------------------
-
-
+\pagebreak
 %----------------------------------------------------------------------------------------
 %	AWARDS SECTION
 %----------------------------------------------------------------------------------------
