--- a/cv_7.tex
+++ b/cv_7.tex
@@ -43,9 +43,9 @@
 
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vitae}
-\address{1029 CR 185}{Garwood, Texas 77442}
+\address{1650 West 6th Street}{Austin, Texas 78703}
 \mobile{(979) 758 2010}
-\email{kaylikallina@gmail.com}
+\email{kaylikallina@utexas.edu}
 % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 
 
@@ -65,8 +65,10 @@
 
 \section{Education}
 
-\cventry{2010--2014}{B.S. in  Psychology}{University of Texas}{Austin}{\textit{GPA -- 3.50/4.00}}{Education Minor}  % Arguments not required can be left empty
-\cventry{2015--2017}{Postbaccalaureate coursework}{}{}{\textit{GPA -- 3.73/4.00}}{Pre-Med requirements completed at the University of Texas and Austin Community College}
+\cventry{2018-present}{Dell Medical School}{}{University of Texas at Austin}{}{M.D., anticipated May 2022}
+\cventry{2010--2014}{B.S. in  Psychology}{}{University of Texas at Austin}{}{Education Minor}
+% Arguments not required can be left empty
+
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -74,7 +76,9 @@
 
 \section{Employment}
 
-\cventry{Aug. 2017 - present}{Emergency Department Scribe}{\textsc{PhysAssist Scribes}}{Dearborn, MI}{}{}
+\cventry{2017 - 2018}{Emergency Department Scribe}{\textsc{PhysAssist Scribes}}{Dearborn, MI}{}{}
+
+\cvlistitem{Awarded Northeast Region Scribe of the Month for April 2018}
 
 %------------------------------------------------
 
@@ -100,7 +104,7 @@ Detailed achievements:
 \end{itemize}}
 
 %------------------------------------------------
-
+\pagebreak
 \cventry{Summer 2011 \& 2012}{Lifeguard}{\textsc{El Campo Aquatic Center}}{El Campo, TX}{}{}
 
 %------------------------------------------------
@@ -133,6 +137,8 @@ Detailed achievements:
 
 %------------------------------------------------
 
+\cventry{Spring 2017}{Volunteer}{\textsc{C.D. Doyle Clinic}}{Austin, TX}{\textit{Seven hours}}{I participated in a student-run clinic to offer free medical services to underserved residents of Austin}
+
 \cventry{Summer 2017}{Physician shadowing}{\textsc{Rice Medical Center}}{Eagle Lake, TX}{}{I observed primary care consultations in a Rural Family Medicine clinic. I also attended rounds and outpatient wound care services at the center's Critical Access Hospital.}
 
 \cvlistitem{R. Russell Thomas, Jr., DO, Family Medicine, \textit{Fifty hours}}
@@ -156,7 +162,8 @@ Detailed achievements:
 
 \section{Community Service}
 
-\cventry{Aug. 2017 - present}{Advocate}{\textsc{Partners in Care Concierge}}{Ann Arbor, MI}{\textit{Three hours}}{Accompany English and/or Spanish-speaking elderly patients to medical appointments.}
+\cventry{Spring 2017}{Trainee}{\textsc{Spanish Community Interpreter Project}}{Washtenaw County, MI}{\textit{Thirty hours}}{}
+\cventry{2017}{Advocate}{\textsc{Partners in Care Concierge}}{Ann Arbor, MI}{\textit{Twenty hours}}{Accompany English and/or Spanish-speaking elderly patients to medical appointments.}
 
 %------------------------------------------------
 
@@ -192,7 +199,7 @@ Detailed achievements:
 \cventry{Dec. 2010}{Music Therapy}{\textsc{Columbus Elementary}}{Columbus, TX}{\textit{Fourteen hours}}{}
 
 %------------------------------------------------
-\pagebreak
+
 %----------------------------------------------------------------------------------------
 %	AWARDS SECTION
 %----------------------------------------------------------------------------------------
