--- a/cv_7.tex
+++ b/cv_7.tex
@@ -43,7 +43,7 @@
 
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vitae}
-\address{1650 West 6th Street}{Austin, Texas 78703}
+\address{1650 West 6th Street Apt M}{Austin, Texas 78703}
 \mobile{(979) 758 2010}
 \email{kaylikallina@utexas.edu}
 % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
